# SEAL

./: .gitignore  README.md  SEAL.sln  seq2seqmodel.py
native/bootcamp/: .gitignore  CMakeLists.txt  bootcamp.cpp  bootcamp.h  bootcamp.vcxproj  bootcamp.vcxproj.filters  example_ckks.cpp  example_ckks.h  example_rnn.cpp  example_rnn.h  helpers.h  main.cpp  matrix_vector.cpp  matrix_vector.h  matrix_vector_crypto.cpp  matrix_vector_crypto.h  mvproduct.cpp  mvproduct.h  polynomial_evaluation.cpp  polynomial_evaluation.h  stopwatch.h  timer.h
native/bootcamp_tests/: bootcamp_tests.vcxproj  matrix_vector_crypto_tests.cpp  matrix_vector_tests.cpp
native/src/: CMakeLists.txt
native/src/seal/util/: msvc.h
